--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -40,7 +40,7 @@
       </div>
 
       <div class="jumbotron">
-        <h1>最好的在线学习平台</h1>
+        <h1>最帮的在线学习平台</h1>
         <p class="lead">Computing-works 帮助所有学习者与其他人和资源联系起来以挖掘他们的最大潜能; 
         		<br /> 生动有趣的交互游戏帮助他们学习编程与作图 </p>
         <p><a class="btn btn-lg btn-success" href="/admin" role="button">立即登入</a></p>
