add digitalocean referal

--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -308,7 +308,7 @@ The submissions will have the format of a standard journal paper and they will b
 			
             <div id="footer">
                 Copyright &copy; 2014-{{ conf_year }} 
-                <a href="http://computing-works.com">Karel Workshop</a> All Rights Reserved.
+                <a href="http://computing-works.com">Computing Works</a> All Rights Reserved. | Powered by  <a href="https://www.digitalocean.com/?refcode=821117b18219" target="_blank">   <img src="{{ MEDIA_URL }}img/logo/foot_logo.png"> </a>
             </div>
         </div>
         {% block tail_scripts %}
