--- a/register/templates/base.html
+++ b/register/templates/base.html
@@ -74,6 +74,7 @@
                         <ul class="menu">
                             <li><a href="/">主 页</a></li>
                             <li><a href="{% url 'regis:about' %}"><b>Karel机器人简介</b></a></li>
+                            <li><a href="/weblog/"><b>活动博客</b></a></li>
                             <li><a href="/venue/">活动地点</a></li>
                             <li><a href="/committees/">教师和成员</a></li>
                             {% if user_count > 50 %}
