--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -61,7 +61,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
       <div class="row marketing">
         <div class="col-lg-6">
           <a href="{% url "regis:about" %}"><h4>Karel机器人</h4></a>
-          <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
+          <p>经典的可视化编程入门教程,训练缜密思维,数学运算和想像力. 孩子们将爱不释手.</p>
 
           <h4>Python语言</h4>
           <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
