--- a/register/templates/courses/karel.html
+++ b/register/templates/courses/karel.html
@@ -42,6 +42,7 @@
 		<li><b>名人堂</b>(杰出及奖金): 真正难题.</li>
 	</ul>
 	<p>请参见: <a href="http://karel.readthedocs.org/zh_CN/latest/p01.html" target="_blank">免费教材</a></p>
+	<p>欢迎关注我们的微信公众号: <br/> <img style="width: 120px; height: 120px" src="{{MEDIA_URL}}img/current/karel-qr.jpg"/></p>
 </div>
 {% endblock %}
 
