--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -47,12 +47,12 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
           <li><a href="{% url 'regis:about' %}">关于</a></li>
           <li><a href="{% url 'regis:contact' %}">联系</a></li>
         </ul>
-        <h3 class="text-muted">Computing-works</h3>
+        <h3 class="text-muted">Kids-Hub</h3>
       </div>
 
       <div class="jumbotron">
         <h1>有趣的在线学习平台</h1>
-        <p class="lead">Computing-works 帮助所有学习者与其他人和资源联系起来以挖掘他们的最大潜能; 
+        <p class="lead">Kids-Hub 帮助所有学习者与其他人和资源联系起来以挖掘他们的最大潜能; 
         		<br /> 生动有趣的交互游戏帮助他们学习编程与作图  <a href="javascript:(function(){function c(){var e=document.createElement(&quot;link&quot;);e.setAttribute(&quot;type&quot;,&quot;text/css&quot;);e.setAttribute(&quot;rel&quot;,&quot;stylesheet&quot;);e.setAttribute(&quot;href&quot;,f);e.setAttribute(&quot;class&quot;,l);document.body.appendChild(e)}function h(){var e=document.getElementsByClassName(l);for(var t=0;t&lt;e.length;t++){document.body.removeChild(e[t])}}function p(){var e=document.createElement(&quot;div&quot;);e.setAttribute(&quot;class&quot;,a);document.body.appendChild(e);setTimeout(function(){document.body.removeChild(e)},100)}function d(e){return{height:e.offsetHeight,width:e.offsetWidth}}function v(i){var s=d(i);return s.height&gt;e&amp;&amp;s.height&lt;n&amp;&amp;s.width&gt;t&amp;&amp;s.width&lt;r}function m(e){var t=e;var n=0;while(!!t){n+=t.offsetTop;t=t.offsetParent}return n}function g(){var e=document.documentElement;if(!!window.innerWidth){return window.innerHeight}else if(e&amp;&amp;!isNaN(e.clientHeight)){return e.clientHeight}return 0}function y(){if(window.pageYOffset){return window.pageYOffset}return Math.max(document.documentElement.scrollTop,document.body.scrollTop)}function E(e){var t=m(e);return t&gt;=w&amp;&amp;t&lt;=b+w}function S(){var e=document.createElement(&quot;audio&quot;);e.setAttribute(&quot;class&quot;,l);e.src=i;e.loop=false;e.addEventListener(&quot;canplay&quot;,function(){setTimeout(function(){x(k)},500);setTimeout(function(){N();p();for(var e=0;e&lt;O.length;e++){T(O[e])}},15500)},true);e.addEventListener(&quot;ended&quot;,function(){N();h()},true);e.innerHTML=&quot; &lt;p&gt;If you are reading this, it is because your browser does not support the audio element. We recommend that you get a new browser.&lt;/p&gt; &lt;p&gt;&quot;;document.body.appendChild(e);e.play()}function x(e){e.className+=&quot; &quot;+s+&quot; &quot;+o}function T(e){e.className+=&quot; &quot;+s+&quot; &quot;+u[Math.floor(Math.random()*u.length)]}function N(){var e=document.getElementsByClassName(s);var t=new RegExp(&quot;\\b&quot;+s+&quot;\\b&quot;);for(var n=0;n&lt;e.length;){e[n].className=e[n].className.replace(t,&quot;&quot;)}}var e=30;var t=30;var n=350;var r=350;var i=&quot;//s3.amazonaws.com/moovweb-marketing/playground/harlem-shake.mp3&quot;;var s=&quot;mw-harlem_shake_me&quot;;var o=&quot;im_first&quot;;var u=[&quot;im_drunk&quot;,&quot;im_baked&quot;,&quot;im_trippin&quot;,&quot;im_blown&quot;];var a=&quot;mw-strobe_light&quot;;var f=&quot;//s3.amazonaws.com/moovweb-marketing/playground/harlem-shake-style.css&quot;;var l=&quot;mw_added_css&quot;;var b=g();var w=y();var C=document.getElementsByTagName(&quot;*&quot;);var k=null;for(var L=0;L&lt;C.length;L++){var A=C[L];if(v(A)){if(E(A)){k=A;break}}}if(A===null){console.warn(&quot;Could not find a node of the right size. Please try a different page.&quot;);return}c();S();var O=[];for(var L=0;L&lt;C.length;L++){var A=C[L];if(v(A)){O.push(A)}}})()"> High一下! </a> </p>
 	   <p><a class="btn btn-lg btn-success" href="{% url 'regis:enroll' %}" role="button">立即报名</a></p>
 	   <!-- <p><a class="btn btn-lg btn-success" href="/admin" role="button">立即登入</a></p> -->
@@ -84,7 +84,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
       </div>
 
       <div class="footer">
-        <p>&copy; Computing-works 2014</p>
+        <p>&copy; Kids-Hub 2014  |  <a href="http://www.miitbeian.gov.cn/"> 京ICP备14043382号-1 </a> </p>
       </div>
 
     </div> <!-- /container -->
