--- a/register/templates/courses/karel.html
+++ b/register/templates/courses/karel.html
@@ -42,7 +42,17 @@
 		<li><b>名人堂</b>(杰出及奖金): 真正难题.</li>
 	</ul>
 	<p>请参见: <a href="http://karel.readthedocs.org/zh_CN/latest/p01.html" target="_blank">免费教材</a></p>
-	<p>欢迎关注我们的微信公众号: <br/> <img style="width: 120px; height: 120px" src="{{MEDIA_URL}}img/current/karel-qr.jpg"/></p>
+	
+	<table >
+		<tr>
+			<td width="56%">
+				<p>欢迎关注我们的微信公众号: <br/> <img style="width: 120px; height: 120px" src="{{MEDIA_URL}}img/current/karel-qr.jpg"/></p>  			
+			</td>
+			<!-- <td style="padding-left: 20px; border-right-style:dotted; border-width: 1px;">
+				<p>手机支付宝小额资助,谢谢! <br/> <img style="width: 120px; height: 120px" src="{{MEDIA_URL}}img/current/karel-qr.jpg"/></p>
+			</td> -->
+		</tr>
+	</table>
 </div>
 {% endblock %}
 
