--- a/register/templates/registration/login.html
+++ b/register/templates/registration/login.html
@@ -10,7 +10,11 @@
             <button type="button" class="close" data-dismiss="alert">×</button>  
             <h4>错误!</h4>用户名或密码错误  
         </div>  
-    {% endif %}      
+    {% endif %}  
+    <h2>第三方登陆</h2>
+    {% load staticfiles %}
+    <a href="{% url 'social:begin' 'douban-oauth2' %}"><img src="{% static 'img/douban/login_with_douban_32.png' %}" alt="豆瓣登陆"></a>
+    <hr />    
     <div class="well">  
         <h1>欢迎登录</h1>  
         <p> </p>  
@@ -23,7 +27,8 @@
                 <a href="{% url 'regis:create_user' %}"><input type="button" value="新用户？" class="btn btn-success"></a>
                 <input type="hidden" name="next" value="{{ next }}" />  
             </p>  
-        </form>  
+        </form>
     </div>  
+   
   
 {% endblock %}
