--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -82,7 +82,9 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
 	  <p></p>
         </div>
       </div>
-
+	<div>
+		<p><a href="http://www.nclab.com.cn:8888">在线桌面</a></p>
+	</div>
       <div class="footer">
         <p>&copy; Kids-Hub 2014  |  <a href="http://www.miitbeian.gov.cn/"> 京ICP备14043382号-1 </a> </p>
       </div>
