--- a/register/templates/register/index.html
+++ b/register/templates/register/index.html
@@ -83,7 +83,7 @@ type='text/javascript';e.parentNode.insertBefore($,e)})(document,'script');
         </div>
       </div>
 	<div>
-		<p><a href="http://desktop.nclab.com.cn:8888">在线桌面</a></p>
+		<p><a href="http://desktop.nclab.com.cn:8888">在线桌面</a> | <a href="http://jungle.nclab.com.cn" target="_blank">Karel the Robot</a></p>
 	</div>
       <div class="footer">
         <p>&copy; Kids-Hub 2015  |  <a href="http://www.miitbeian.gov.cn/"> 京ICP备14043382号-1 </a> </p>
